# apollo-mmwave

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: lint.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/apollo_mmwave/: __init__.py  binary_sensor.py  config_flow.py  const.py  frontend.py  manifest.json  migration.py  sensor.py  store.py
custom_components/apollo_mmwave/translations/: en.json
custom_components/apollo_mmwave/www/: apollo-radar-tuning.js  zone-mapper-card.js
frontend-src/: ff-probe.mjs  package-lock.json  package.json  vite.config.ts
frontend-src/src/: entities.ts  index.ts  ld2450.ts  profiles.ts  register.ts  strategy-core.ts  strategy.ts  types.ts
frontend-src/src/cards/: distance-card.ts  gate-energy-card.ts  resolution.ts
frontend-src/src/charts/: distance-chart.ts  unit-convert.ts
frontend-src/test/: card-resolution.test.ts  entities.test.ts  ghost-devices.test.ts  ld2450.test.ts  register.test.ts  registry-detection.test.ts  strategy-core.test.ts  strategy-regen.test.ts  unit-convert.test.ts
tests/: __init__.py  conftest.py  test_config_flow.py  test_frontend.py  test_init.py  test_migration.py
